<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:background="@color/gray"
    android:gravity="center">

    <TextView
        android:id="@+id/noInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/no_internet_connection" />

    <ImageView
        android:id="@+id/no_internet_image"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/no_internet"
        android:contentDescription="@string/image_no_internet" />

    <TextView
        android:id="@+id/tryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/not_connected_try_again" />

    <Button
        android:id="@+id/reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:text="@string/reload" />
</LinearLayout>
