<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dark"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/lang_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="12dp"
            android:text="@string/english"/>

        <RadioButton
            android:id="@+id/lang_el"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="12dp"
            android:text="@string/greek" />

        <RadioButton
            android:id="@+id/lang_sr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="12dp"
            android:text="@string/serbian" />
    </RadioGroup>

</LinearLayout>
