<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/noFavoriteMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:text="@string/no_favorite_movies" />

    <TextView
        android:id="@+id/addFavoriteMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:text="@string/add_favorite_movies" />

    <ImageView
        android:id="@+id/watchingTogetherImage"
        android:layout_height="350dp"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:src="@drawable/watching_together"
        android:contentDescription="@string/image_watching_together" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:spanCount="3"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_movie" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>